# vscode-bazel-cpp-example

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE
bazel/: copts.bzl
example_bin/: BUILD.bazel  example.cc
example_lib/: BUILD.bazel  example.cc  example.hh
