load("@bzlws//rules:bzlws_copy.bzl", "bzlws_copy")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

# Alternatively you can run `bazel run @hedron_compile_commands//:refresh_all`
# if your setup is simple enough.
# Please read https://github.com/hedronvision/bazel-compile-commands-extractor
refresh_compile_commands(
    name = "copy_compile_commands",
    targets = {
        # List out your binary targets you want to have compile_commands.json
        # for in order to have autocomplete working correctly.
        "//example_bin": "",
    },
)

bzlws_copy(
    name = "copy_vscode_config_files",
    out = ".vscode/{BASENAME}.json",
    srcs = [
        "//.vscode:launch.json-tpl",
    ],
    substitutions = {
        "@bzlws//info:execution_root": "__EXEC_ROOT__",
        "@bzlws//info:bazel-bin": "__BAZEL_BIN__",
        "@bzlws//info:workspace": "__WORKSPACE__",
        "@bzlws//info:output_base": "__OUTPUT_BASE__",
    },
)
